# SzachyOnline

./: CMakeLists.txt  README.md  figury.h  klient  klient.c  komendy.c  komendy.h  main.cpp  plansza.cpp  plansza.h  ruchy.cpp  serwer  serwer.c  szachownica.c  szachownica.h  test.c  testy.cpp
.github/workflows/: c-cpp.yml
stare c++/: figury.h  main.cpp  plansza.cpp  plansza.h  ruchy.cpp
